[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.5" }
diesel = { version = "2.2.2", features = ["postgres_backend", "postgres", "numeric"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
